--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>athleteON</title>
 </head>
-<body>
+<body class="container container__home">
     
     <div id='dark-overlay' class="dark-overlay d-none"></div>
-    <div id='nav-mobile' class="nav-mobile">
-    </div>
+    <div id='nav-mobile' class="nav-mobile"></div>
+    <nav id="nav" class="nav"></nav>
 
-    <nav id="nav" class="nav">
-        <!-- <div class="nav__logo">
-            athleteON
-        </div>
-        <ul class="nav__menu">
-            <li class="nav__item">
-                <a href="#" class="nav__link">Link</a>
-            </li>
-        </ul> -->
-    </nav>
 
+    <header id="header" class="header mt-md">
+        <!-- <div class="header__content">
+            <h2 class="heading-sekundarni">where athletes are made</h2>
+            <h1 class="heading-primarni heading-primarni--glavni">Turn Your athlete<span>ON</span></h1>
+            <button class="btn">Our Programs</button>
+        </div> -->
+    </header>
+
+    <section class="services">
+        Services
+    </section>
 
 
     
