--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     <section id="team" class="team mt-lg">
         
         <div class="team__content">
-            <h3 class="heading-sekundarni mb-md">
+            <h3 class="heading-sekundarni mb-lg">
                 Meet the team
             </h3>
             <div class="team__cards">
