--- a/index.html
+++ b/index.html
@@ -104,9 +104,11 @@
     </div>
 
     <section id="programs" class="programs mt-lg">
-        <!-- <h3 class="heading-sekundarni">Our Programs</h3>
+        <!-- <h3 class="heading-sekundarni">Our Programs</h3> -->
 
-        <div class="programs__cards mt-md">
+        
+
+        <!-- <div class="programs__cards mt-md">
 
             <div class="programs__card">
                 <div class="programs__head">
@@ -134,7 +136,7 @@
             <div class="programs__card">
                 <div class="programs__head">
                     <div class="programs__img-placeholder">
-                        <img src="img/athlete-2.jpg" alt="" class="programs__img">
+                        <img src="img/athlete-6.jpg" alt="" class="programs__img">
                         <h3 class="heading-ternarni programs__heading">Explosive</h3>
                     </div>
                 </div>
@@ -157,7 +159,7 @@
             <div class="programs__card">
                 <div class="programs__head">
                     <div class="programs__img-placeholder">
-                        <img src="img/athlete-2.jpg" alt="" class="programs__img">
+                        <img src="img/athlete-5.jpg" alt="" class="programs__img">
                         <h3 class="heading-ternarni programs__heading">Explosive</h3>
                     </div>
                 </div>
@@ -178,7 +180,7 @@
                 </div>
             </div>
 
-        </div> --> 
+        </div>  -->
     </section>
     <!--  -->
 
