--- a/about.html
+++ b/about.html
@@ -30,10 +30,10 @@
 
     <section id="about-hero" class="about-hero mt-lg pt-lg">
         <div class="about-hero__content">
-            <h3 class="about-hero__heading heading-sekundarni mb-md">
+            <!-- <h3 class="about-hero__heading heading-sekundarni mb-md">
                 Ovo je naslov H3
-            </h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae distinctio perspiciatis id consequatur provident, qui a quaerat sequi rem exercitationem eaque. Iusto repudiandae possimus quas.</p>
+            </h3> -->
+            <p>You are never really playing an opponent. You are playing yourself, your own highest standards, and when you reach your limits, that is real joy.</p>
         </div>
     </section>
 
@@ -96,31 +96,31 @@
                 <div class="faq__accordion">
                     <div class="faq__head">
                         <h4 class="heading-ternarni">
-                            Pitanje 1
+                            How do I apply for a specific program?
                         </h4>
                     </div>
                     <div class="faq__body">
-                        <p>Body 1</p>
+                        <p>On our Contact page there is a form that ask You about some basic info. Choose a program and click Get Started.</p>
                     </div>
                 </div>
                 <div class="faq__accordion">
                     <div class="faq__head">
                         <h4 class="heading-ternarni">
-                            Pitanje 2
+                            Is there a limit to number of selected programs?
                         </h4>
                     </div>
                     <div class="faq__body">
-                        <p>Body 2</p>
+                        <p>No, there is no upper limit, but we wouldn't recommend more than 2 at a time.</p>
                     </div>
                 </div>
                 <div class="faq__accordion">
                     <div class="faq__head">
                         <h4 class="heading-ternarni">
-                            Pitanje 3
+                            Is there a Online 1 on 1 Program due to Pandemic?
                         </h4>
                     </div>
                     <div class="faq__body">
-                        <p>Body 3</p>
+                        <p>Currently we do not operate in that manner but are planning of expanding our services due to Coronavirus.</p>
                     </div>
                 </div>
             </div>
