--- a/author.html
+++ b/author.html
@@ -38,7 +38,7 @@
             <div class="author__content" id="author-content">
                 <div class="author__main">
                     <div class="author__img-placeholder">
-                        <img src="img/spass-large-comp.jpg" alt="author" class="author__img">
+                        <img src="img/autor_i_spasiteljke.jpg" alt="author" class="author__img">
                         <span class="author__caption">Moje spasiteljke i ja</span>
                     </div>
                     <div class="author__info ">
