--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -66,10 +67,10 @@
 
     <section class="banner-1 mt-lg" id="banner-1">
         <div class="banner-1__left">
-            <div class="banner-1__img-placeholder banner-1__img-placeholder--1">
+            <div class="banner-1__img-placeholder banner-1__img-placeholder--1" data-aos="fade-right"  data-aos-delay="50"  data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false" data-aos-anchor-placement="top-center">
                 <img src="img/athlete-6.jpg" alt="athlete" class="banner-1__img">
             </div>
-            <div class="banner-1__img-placeholder banner-1__img-placeholder--2">
+            <div class="banner-1__img-placeholder banner-1__img-placeholder--2" data-aos="fade-left" >
                 <img src="img/athlete-3.jpg" alt="athlete" class="banner-1__img">
             </div>
         </div>
@@ -77,7 +78,7 @@
             <div class="banner-1__content">
                 <h3 class="banner-1__heading heading-sekundarni">Healthy Athlete</h3>
                 <h4 class="heading-ternarni mt-md">Develop Your Athletic Body</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae distinctio perspiciatis id consequatur provident, qui a quaerat sequi rem exercitationem eaque. Iusto repudiandae possimus quas.</p>
+                <p>We've helped over one hundred of athletes of all levels, from youth to elite, reach their athletic goals, get stronger, faster, build muscle, lose body fat and stay healthy.</p>
                 <a href="programs.html" class="banner-1__btn btn">Our Programs</a>
             </div>
         </div>
@@ -433,6 +434,7 @@
     
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="js/aos.js"></script>
     <script src="js/nav.js"></script>
 </body>
 </html>
