--- a/programs.html
+++ b/programs.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -37,9 +38,9 @@
     <section id="programs" class="programs mt-lg">
         <div class="programs__filter mt-md mb-md">
             <div id="btn-group" class="programs__btn-group">
-                <a href="" id="all" class="btn">All</a>
-                <a href="" id="weights" class="btn">Weights</a>
-                <a href="" id="yoga" class="btn">Yoga</a>
+                <a href="#" id="all" class="btn">All</a>
+                <a href="#" id="weights" class="btn">Weights</a>
+                <a href="#" id="yoga" class="btn">Yoga</a>
             </div>
         </div>
     </section>
@@ -47,11 +48,13 @@
 
     <section id="reviews" class="reviews mt-lg"></section>
 
+
     <section id="footer" class="footer mt-lg">
     
     </section>
     
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="js/aos.js"></script>
     <script src="js/nav.js"></script>
 </body>
 </html>
