--- a/about.html
+++ b/about.html
@@ -7,32 +7,23 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>athleteON</title>
+    <meta name="description" content="This is the about page of the athleteON. Here You can learn more about us. Who we are, what we do and how we can help you be a better athlete.">
+    <meta name="keywords" content="athlete, sport, fit, exercise, program">
 </head>
 <body class="container container__about">
 
-    <div id="top" class="top">
-        <span class="material-icons">
-            arrow_upward
-        </span>
-    </div>
+    <div id="top" class="top"><span class="material-icons">arrow_upward</span></div>
     
     <div id='dark-overlay' class="dark-overlay d-none"></div>
     <div id='nav-mobile' class="nav-mobile"></div>
     <nav id="nav" class="nav"></nav>
 
+    <header id="header" class="header mt-md"></header>
 
-    <header id="header" class="header mt-md">
-    </header>
-
-    <section id="services" class="services mt-lg">
-
-    </section>
+    <section id="services" class="services mt-lg"></section>
 
     <section id="about-hero" class="about-hero mt-lg pt-lg">
         <div class="about-hero__content">
-            <!-- <h3 class="about-hero__heading heading-sekundarni mb-md">
-                Ovo je naslov H3
-            </h3> -->
             <p>You are never really playing an opponent. You are playing yourself, your own highest standards, and when you reach your limits, that is real joy.</p>
         </div>
     </section>
@@ -48,7 +39,7 @@
                 <div class="team__card">
                     <div class="team__head">
                         <div class="team__img-placeholder">
-                            <img src="img/trainer-1.jpg" alt="" class="team__img">
+                            <img src="img/trainer-1.jpg" alt="Trainer and CEO" class="team__img">
                         </div>
                     </div>
                     <div class="team__body">   
@@ -60,7 +51,7 @@
                 <div class="team__card">
                     <div class="team__head">
                         <div class="team__img-placeholder">
-                            <img src="img/trainer-2.jpg" alt="" class="team__img">
+                            <img src="img/trainer-2.jpg" alt="Trainer and Manager" class="team__img">
                         </div>
                     </div>
                     <div class="team__body">   
@@ -72,7 +63,7 @@
                 <div class="team__card">
                     <div class="team__head">
                         <div class="team__img-placeholder">
-                            <img src="img/trainer-3.jpg" alt="" class="team__img">
+                            <img src="img/trainer-3.jpg" alt="Trainer" class="team__img">
                         </div>
                     </div>
                     <div class="team__body">   
@@ -84,8 +75,6 @@
             </div>
         </div>
     </section>
-
-
 
     <section id="faq" class="faq mt-lg">
         <div class="faq__content">
@@ -127,14 +116,10 @@
         </div>
     </section>
 
-
-
-    <section id="footer" class="footer mt-lg">
-       
-    </section>
+    <section id="footer" class="footer mt-lg"></section>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="js/nav.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
